# ChangeLog for www-client/lynx
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/ChangeLog,v 1.55 2006/12/05 01:40:44 jer Exp $

  05 Dec 2006; Jeroen Roovers <jer@gentoo.org> lynx-2.8.6-r2.ebuild:
  Stable for HPPA (bug #157100).

  04 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> lynx-2.8.6-r1.ebuild:
  Stable on sparc wrt #157100

  04 Dec 2006; Tim Yamin <plasmaroo@gentoo.org> lynx-2.8.6-r1.ebuild:
  Stable on IA64; bug #157100.

  04 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> lynx-2.8.6-r1.ebuild:
  Stable on ppc wrt bug #157100

  04 Dec 2006; Markus Rothe <corsair@gentoo.org> lynx-2.8.6-r1.ebuild:
  Stable on ppc64; bug #157100

  04 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> lynx-2.8.6-r1.ebuild:
  Stable on Alpha and MIPS; bug #157100

  04 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  files/digest-lynx-2.8.6-r1, Manifest:
  Redigested, reported by eroyf.

*lynx-2.8.6-r2 (04 Dec 2006)

  04 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> metadata.xml,
  +lynx-2.8.6-r2.ebuild:
  Updated to rel.4.
  Fixed bug #154234.

*lynx-2.8.6-r1 (13 Oct 2006)

  13 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> -lynx-2.8.6_rc5.ebuild,
  -lynx-2.8.6.ebuild, +lynx-2.8.6-r1.ebuild:
  Update to rel.2. Cleanup.

*lynx-2.8.6 (12 Oct 2006)

  12 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> +lynx-2.8.6.ebuild:
  Version bump.

  09 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> -lynx-2.8.6_rc1.ebuild,
  -lynx-2.8.6_rc2.ebuild, -lynx-2.8.6_rc3.ebuild, -lynx-2.8.6_rc4.ebuild:
  Cleanup.

*lynx-2.8.6_rc5 (03 Oct 2006)

  03 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> +lynx-2.8.6_rc5.ebuild:
  Version bump.

*lynx-2.8.6_rc4 (01 Oct 2006)

  01 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> +lynx-2.8.6_rc4.ebuild:
  Version bump.

*lynx-2.8.6_rc3 (11 Sep 2006)

  11 Sep 2006; Emanuele Giaquinta <exg@gentoo.org> +lynx-2.8.6_rc3.ebuild:
  Version bump.

*lynx-2.8.6_rc2 (10 Sep 2006)
