@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/Attic/lynx-2.8.6-r2.ebuild,v 1.2 2006/12/05 01:40:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/Attic/lynx-2.8.6-r2.ebuild,v 1.3 2006/12/05 01:43:42 jer Exp $
 
 inherit eutils
 
@@ -13,7 +13,7 @@ SRC_URI="ftp://lynx.isc.org/${MY_P}/${MY_P}rel.4.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~mips ~ppc ~ppc-macos ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc-macos ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE="bzip2 cjk ipv6 linguas_ja nls ssl unicode"
 
 RDEPEND="sys-libs/ncurses
