@@ -1,6 +1,10 @@
 # ChangeLog for www-client/lynx
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/ChangeLog,v 1.55 2006/12/05 01:40:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/ChangeLog,v 1.56 2006/12/05 01:43:42 jer Exp $
+
+  05 Dec 2006; Jeroen Roovers <jer@gentoo.org> lynx-2.8.6-r1.ebuild,
+  lynx-2.8.6-r2.ebuild:
+  Mark the correct revision stable for HPPA (bug #157100).
 
   05 Dec 2006; Jeroen Roovers <jer@gentoo.org> lynx-2.8.6-r2.ebuild:
   Stable for HPPA (bug #157100).
